# obs_install_manager

./: Cargo.toml  README.md  build.rs  obs-install-manager-manifest.rc
.github/workflows/: build.yml
src/: app.rs  file.rs  git.rs  install.rs  main.rs  scut.rs  ui.rs
