[package]
name = "obs_install_manager"
author = "Robert A. Ware"
version = "0.1.1"
edition = "2024"

[build-dependencies]
embed-resource = "3.0.6"

[dependencies]
color-eyre = "0.6.3"
crossterm = "0.28.1"
curl = "0.4.49"
opener = { version = "0.8.3", features = ["reveal"] }
plist = "1.8.0"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", features = ["blocking", "stream", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zip = "5.1.1"

[target.'cfg(windows)'.dependencies]
mslnk = "0.1.8"
